# ink-stroke-modeler-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  crates.js  help.html  index.html  justfile  math_part.typ  search-index.js  settings.html  source-files.js  src-files.js  todo.md
.github/workflows/: ci.yaml  docs.yaml
docs/: math_part.typ  notations.html  notations.typ  position_modeling.html  position_modeling.typ  resampling.html  resampling.typ  resampling_list.typ  stroke_end.html  stroke_end.typ  stylus_state_modeler.html  stylus_state_modeler.typ  wobble.html  wobble.typ
examples/: stroke.rs
include/: extras.h
ink_stroke_modeler_rs/: all.html  enum.Errors.html  enum.ModelerError.html  enum.ModelerInputEventType.html  enum.PredictionParams.html  index.html  sidebar-items.js  struct.KalmanPredictorParams.html  struct.ModelerInput.html  struct.ModelerParams.html  struct.ModelerResult.html  struct.StrokeModeler.html  struct.StrokeModelerParams.html
ink_stroke_modeler_rs/engine/: enum.Errors.html  struct.StrokeModeler.html
ink_stroke_modeler_rs/error/: enum.ElementError.html  enum.ElementOrderError.html  enum.ModelerError.html  index.html  sidebar-items.js
ink_stroke_modeler_rs/input/: enum.ModelerInputEventType.html  struct.ModelerInput.html
ink_stroke_modeler_rs/params/: struct.ModelerParams.html
src/: engine.rs  error.rs  extras.cc  impl_ds.rs  input.rs  lib.rs  params.rs  position_modeler.rs  results.rs  state_modeler.rs  testing.rs  utils.rs  wobble_doc.html  wobble_smoother.rs
src/ink_stroke_modeler_rs/: engine.rs.html  (+8 more)
(+42 files in other folders)
